--- a/src/main/resources/com/handen/easyFlowCharts/mainScreen/main_layout.fxml
+++ b/src/main/resources/com/handen/easyFlowCharts/mainScreen/main_layout.fxml
@@ -8,15 +8,16 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TextField?>
-<AnchorPane fx:id="container" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.handen.easyFlowCharts.mainScreen.MainController">
+<AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.handen.easyFlowCharts.mainScreen.MainController">
 
     <MenuBar>
         <Menu text="About">
@@ -38,7 +39,7 @@
         <padding>
             <Insets left="50.0" right="50.0" />
         </padding>
-        <Label text="Enter source file or folder with source files:">
+        <Label text="Enter path of folder with source files:">
             <font>
                 <Font size="18.0" />
             </font>
@@ -46,14 +47,23 @@
                 <Insets top="200.0" />
             </VBox.margin>
         </Label>
-        <TextField fx:id="source_text_area" prefHeight="30.0" prefWidth="600.0">
-            <VBox.margin>
-                <Insets top="15.0" />
-            </VBox.margin>
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </TextField>
+        <HBox prefHeight="100.0" prefWidth="200.0">
+            <TextField fx:id="source_text_area" prefHeight="30.0" prefWidth="600.0">
+                <font>
+                    <Font size="18.0" />
+                </font>
+            <HBox.margin>
+               <Insets top="7.0" />
+            </HBox.margin>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#onSourceButtonClicked" style="-fx-background-color: transparent;">
+                <graphic>
+                    <ImageView fitHeight="48.0" fitWidth="48.0">
+                        <Image url="ic_folder.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
+        </HBox>
         <Label fx:id="source_error_text" textFill="#f44336" visible="false">
             <font>
                 <Font size="14.0" />
@@ -67,7 +77,7 @@
                 <Font size="14.0" />
             </font>
         </CheckBox>
-        <Label layoutX="60.0" layoutY="10.0" text="Enter save directory:">
+        <Label layoutX="60.0" layoutY="10.0" text="Enter save directory path:">
             <font>
                 <Font size="18.0" />
             </font>
@@ -75,17 +85,29 @@
                 <Insets top="15.0" />
             </VBox.margin>
         </Label>
-        <TextField fx:id="save_text_area" layoutX="60.0" layoutY="252.0" prefHeight="30.0" prefWidth="200.0">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </TextField>
+        <HBox prefHeight="100.0" prefWidth="200.0">
+            <TextField fx:id="save_text_area" layoutX="60.0" layoutY="252.0" prefHeight="39.0" prefWidth="547.0">
+                <font>
+                    <Font size="18.0" />
+                </font>
+                <HBox.margin>
+                    <Insets top="7.0" />
+                </HBox.margin>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#onSaveButtonClicked" style="-fx-background-color: transparent;">
+                <graphic>
+                    <ImageView fitHeight="48.0" fitWidth="48.0">
+                        <Image url="ic_folder.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
+        </HBox>
         <Label fx:id="save_error_text" layoutX="60.0" layoutY="292.0" textFill="#f44336" visible="false">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button fx:id="create_button" alignment="CENTER" mnemonicParsing="false" onAction="#onCrateButtonClicked" style="-fx-background-color: #4caf50;" text="Create flowchart!" textFill="WHITE">
+        <Button fx:id="create_button" alignment="CENTER" mnemonicParsing="false" onAction="#onCreateButtonClicked" style="-fx-background-color: #4caf50;" text="Create flowchart!" textFill="WHITE">
             <VBox.margin>
                 <Insets left="200.0" top="40.0" />
             </VBox.margin>
