Resize draw constants

--- a/src/main/resources/com/handen/easyFlowCharts/mainScreen/flowchart_layout.fxml
+++ b/src/main/resources/com/handen/easyFlowCharts/mainScreen/flowchart_layout.fxml
@@ -8,47 +8,42 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="900.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.handen.easyFlowCharts.flowChartScreen.FlowchartController">
+<AnchorPane prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.handen.easyFlowCharts.flowChartScreen.FlowchartController">
     <VBox>
-        <HBox prefHeight="50.0" prefWidth="600.0">
-            <Button fx:id="previous_button" mnemonicParsing="false"
-                    onAction="#onPreviousClicked" text="Previous">
+        <HBox prefHeight="50.0" prefWidth="900.0">
+            <Button fx:id="previous_button" mnemonicParsing="false" onAction="#onPreviousClicked" text="Previous">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
                 <HBox.margin>
-                    <Insets left="100.0" top="10.0"/>
+                    <Insets left="300.0" top="10.0" />
                 </HBox.margin>
             </Button>
             <Label fx:id="status_label" text="0/0">
                 <HBox.margin>
-                    <Insets left="100.0" top="15.0"/>
+                    <Insets left="100.0" top="15.0" />
                 </HBox.margin>
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
             </Label>
-            <Button fx:id="next_button" layoutX="110.0" layoutY="20.0" mnemonicParsing="false"
-                    onAction="#onNextClicked" text="Next">
+            <Button fx:id="next_button" layoutX="110.0" layoutY="20.0" mnemonicParsing="false" onAction="#onNextClicked" text="Next">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
                 <HBox.margin>
-                    <Insets left="100.0" top="10.0"/>
+                    <Insets left="100.0" top="10.0" />
                 </HBox.margin>
             </Button>
             <VBox.margin>
-                <Insets/>
+                <Insets />
             </VBox.margin>
         </HBox>
-        <ScrollPane fx:id="canvas_container" prefHeight="851.0" prefWidth="600.0"/>
+        <ScrollPane fx:id="canvas_container" prefHeight="851.0" prefWidth="900.0" />
     </VBox>
-    <Label layoutX="244.0" layoutY="430.0" text="Flowchart is loading..." fx:id="content_loading_label">
+    <Label fx:id="content_loading_label" layoutX="374.0" layoutY="425.0" text="Flowchart is loading...">
         <font>
-            <Font size="16.0"/>
+            <Font size="16.0" />
         </font>
     </Label>
 </AnchorPane>
